# globi-v

./: .gitignore  DUOS_BASELINE.md  LICENSE  README.md  WORKSPACE_MAP.md
assets/: README.md
board-runtime/: .gitignore
board-runtime/minimal-cviruntime-runner/: CMakeLists.txt  README.md  build.sh  deploy_test_image_preprocess.sh  deploy_test_traffic_light.sh
board-runtime/minimal-cviruntime-runner/src/: main.cpp
board-runtime/minimal-cviruntime-runner/tools/: decode_yolov8_npz.py
camera_capture/: .gitignore  Makefile  camera_capture.c
docs/: 2026-05-04-traffic-light-board-validation-and-yolov5u-note.md  2026-05-04-traffic-light-yolov5s-tpu-mlir.md  2026-05-04-traffic-light-yolov5s-training.md  2026-05-05-final-summary.md  2026-05-05-live-inference-integration.md  2026-05-05-live-runner-rtsp-inference.md  2026-05-05-process-12-live-runner-sigsegv-root-cause-and-stable-skeleton.md  2026-05-05-process-13-live-runner-restart-recovery-and-mmf-recover.md  2026-05-05-process-14-live-inference-integration.md  2026-07-05-duos-official-baseline-audit.md  2026-07-06-teammate-yolov5s-cvimodel.md  README.md  duos-official-development-handbook.md
tools/: annotate_crosswalk_videos.py  annotate_video_from_board_json.py  annotate_yolov5_split_video.py  build_crosswalk_guide_arrows_yolov5s_cvimodel.sh  build_mangdao_yolov8seg_cvimodel.sh  build_teammate_yolov5s_cvimodel.sh  build_traffic_light_crosswalk_yolov5s_cvimodel.sh  camera_server.py  check_duos_official_baseline.sh  decode_mangdao_yolov8seg_board_npz.py  diagnose_duos_link.ps1  eval_crosswalk_video_frames.py  (+2 more)
(+27 files in other folders)
